# KDash-Endurance

./: README.md
src/: .gitignore  MODULE.bazel  WORKSPACE
src/db/: schema.sql
src/main/java/me/williamhester/kdash/web/: BUILD  Converters.kt  DataSnapshotQueue.kt  DesktopMain.kt  Exceptions.kt  LiveTelemetryDataWriter.kt  LiveTelemetryPusherService.kt  LiveTelemetryService.kt  Main.kt  ServerRunner.kt  Utils.kt
src/main/java/me/williamhester/kdash/web/client/: BUILD  Client.kt  IRacingLoggedDataAndMetadataReader.kt  LocalClient.kt  LocalMultiDriverClient.kt  ProdClient.kt  SynchronizedStreamObserver.kt  localhost.crt
src/main/java/me/williamhester/kdash/web/common/: BUILD  Interpolation.kt  SynchronizedStreamObserver.kt
src/main/java/me/williamhester/kdash/web/extensions/: BUILD  Extensions.kt  ProtoExtensions.kt
src/main/java/me/williamhester/kdash/web/models/: Account.kt  BUILD  DataPoint.kt  Session.kt  SessionInfo.kt  SessionKey.kt  SyntheticFields.kt  TargetLap.kt  TelemetryDataPoint.kt  TelemetryRange.kt
src/main/java/me/williamhester/kdash/web/monitors/: BUILD  CarIdxDistanceLookupTableMonitor.kt  Converters.kt  DataSnapshotLogger.kt  DataSnapshotMonitor.kt  DistanceLookupTableMonitor.kt  DriverCarLapLogger.kt  DriverCarLapMonitor.kt  DriverDistancesMonitor.kt  DriverMonitor.kt  FuelUsageMonitor.kt  LiveTelemetryMonitor.kt  MutableSyntheticFields.kt  OtherCarsLapLogger.kt  OtherCarsLapMonitor.kt  RelativeMonitor.kt  RelativeMonitor2.kt
src/main/java/me/williamhester/kdash/web/query/: BUILD  Processors.kt  Query.kt  VariableMapping.kt
src/main/java/me/williamhester/kdash/web/service/telemetry/: BUILD  Converters.kt  GetStaticSessionInfoHandler.kt  ListSessionsHandler.kt  LiveTelemetryService.kt  MonitorCurrentDriversHandler.kt  MonitorLapsHandler.kt  MonitorSessionInfoHandler.kt  QueryRealtimeTelemetryHandler.kt  QueryTelemetryHandler.kt
src/main/java/me/williamhester/kdash/web/service/telemetry/query/: BUILD  DataPoint.kt  Processors.kt  Query.kt  VariableMapping.kt
src/main/java/me/williamhester/kdash/web/service/telemetrypusher/: BUILD  DriverConnection.kt  Extensions.kt  LiveTelemetryDataWriter.kt  LiveTelemetryPusherService.kt  SessionConnectionRegistry.kt
src/main/java/me/williamhester/kdash/web/service/telemetrypusher/monitors/: BUILD  CarIdxDistanceLookupTableMonitor.kt  Converters.kt  DataSnapshotLogger.kt  DistanceLookupTableMonitor.kt  DriverCarLapLogger.kt  MutableSyntheticFields.kt  OtherCarsLapLogger.kt  RelativeMonitor.kt  RelativeMonitor2.kt
src/main/java/me/williamhester/kdash/web/service/telemetrypusher/state/: BUILD  MetadataHolder.kt
src/main/java/me/williamhester/kdash/web/session/: BUILD  UserSessionManager.kt
src/main/java/me/williamhester/kdash/web/state/: BUILD  DataSnapshotQueue.kt  MetadataFetcher.kt  MetadataHolder.kt
src/main/java/me/williamhester/kdash/web/store/: BUILD  ConnectionProvider.kt  SessionInfo.kt  SessionStore.kt  Store.kt  StreamedResponseListener.kt
src/main/javatests/me/williamhester/kdash/web/: BUILD
src/main/javatests/me/williamhester/kdash/web/query/: BUILD  ProcessorsTest.kt  QueryTest.kt
src/main/javatests/me/williamhester/kdash/web/service/telemetry/query/: BUILD  ProcessorsTest.kt  QueryTest.kt
src/main/packaging/: BUILD  client_launch4j_config.xml.template  launch4j.bzl
src/main/proto/: BUILD  live_telemetry_pusher_service.proto  live_telemetry_service.proto  storage.proto
src/main/static/: deploy.sh  envoy.yaml  generate_proto_client.sh  generate_proto_client_2.sh  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js  webpack.config.js
src/main/static/public/: index.html  lap.html  login.html  sessiondetails.html  sessions.html
src/main/static/src/: App.jsx  LapRow.css  LapRow.jsx  PageRoot.jsx  PitChip.jsx  SessionPage.jsx  Tabs.css  Tabs.jsx  app.css  app.html  base.css  favicon.xcf  icon-wip.xcf  live_telemetry_service_grpc_web_pb.js  live_telemetry_service_pb.js  spa.jsx  utils.js
src/main/static/src/base/: Column.jsx  Row.jsx
src/main/static/src/charts/: Chart.tsx  Chart2.jsx  ChartContainer.jsx  ChartSyncContext.jsx  types.d.ts  useResizeObserver.ts  useTooltipSorter.ts  useZoomAndPan.ts  utils.ts
src/main/static/src/fuel/: FuelChartPage.jsx
src/main/static/src/gapchart/: GapChartPage.jsx  GapChartPage2.jsx
src/main/static/src/gaps/: GapsPage.css  GapsPage.jsx
src/main/static/src/laplog/: LapLogPage.css  LapLogPage.jsx  OtherCarsLapLogPage.jsx  PitChip.css  PitChip.jsx
src/main/static/src/lib/: formatters.js  gaps.js  utils.js
src/main/static/src/lib/charts/: TelemetryChart.svelte
src/main/static/src/lib/components/: CarLapLog.svelte  DataBox.svelte  DataTable.svelte  DriverDataBox.svelte  GapsTable.svelte  HeaderSelect.svelte  LapLogTable.svelte  LeaderboardTable.svelte  PitChip.svelte  StintLogTable.svelte  TeamSelectionDialog.svelte  VariableBox.svelte
src/main/static/src/lib/components/ui/select/: select-item.svelte
src/main/static/src/lib/grpc/: live_telemetry_service.ts
src/main/static/src/lib/grpc/google/protobuf/: timestamp.ts
src/main/static/src/lib/stores/: drivers.svelte.js  options.js  session.js
src/main/static/src/othercarstintlog/: OtherCarStintLogPage.jsx
src/main/static/src/overview/: CarLapLog.css  CarLapLog.jsx  GapsPage.jsx  OtherCarsLapLog.jsx  RaceOverviewPage.css  RaceOverviewPage.jsx  VariableBox.css  VariableBox.jsx
src/main/static/src/routes/: +layout.svelte  +page.svelte
src/main/static/src/routes/[sessionId]/[subId]/[simId]/[carNum]/: +layout.svelte  +page.svelte
src/main/static/src/routes/[sessionId]/[subId]/[simId]/[carNum]/laps/: +page.svelte
src/main/static/src/routes/[sessionId]/[subId]/[simId]/[carNum]/leaderboard/: +page.svelte
src/main/static/src/sessioncarlist/: SessionCarListPage.jsx
src/main/static/src/stintlog/: StintLogPage.css  StintLogPage.jsx
src/main/static/src/telemetry/: TelemetryPage.jsx
src/main/static/src/trackmap/: TrackMapPage.css  TrackMapPage.jsx
src/main/static/static/: robots.txt
src/main/storage/: database.sql
(+4 files in other folders)
