# -- bazel_dep definitions -- #
bazel_dep(name = "grpc-java", version = "1.71.0")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "grpc-kotlin", version = "1.7.1")

# Temporary local override for grpc_kotlin
local_path_override(
    module_name = "grpc-kotlin",
    path = "/Users/williamhester/Programming/grpc-kotlin",
)

# -- Configure Kotlin --
KOTLIN_VERSION = "1.9.23"
kotlin = use_extension("@rules_kotlin//kotlin:extensions.bzl", "kotlin")
kotlin.toolchain(version = KOTLIN_VERSION)

# The extension often defines the repository for the compiler itself.
# You might need to make it visible using use_repo.
# Check the rules_kotlin docs for the exact repository name needed (often 'kotlin_compiler').
use_repo(kotlin, "kotlin_compiler")

bazel_dep(name = "kdash")
local_path_override(
    module_name = "kdash",
    path = "/Users/williamhester/IdeaProjects/iRacingOverlay/src",
)

# -- Configure Maven --
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:31.1-jre",
        "com.google.flogger:flogger:0.7.4",
        "com.google.flogger:flogger-system-backend:0.7.4",
        "com.google.protobuf:protobuf-kotlin:3.17.0",
        "com.google.protobuf:protobuf-java-util:4.31.1",
        "com.squareup.okhttp3:okhttp:4.10.0",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10",
        "io.grpc:grpc-api:1.57.0",
        "io.grpc:grpc-all:1.57.0",
        "io.grpc:grpc-netty-shaded:1.57.0",
        "io.grpc:grpc-protobuf:1.57.0",
        "io.grpc:grpc-stub:1.57.0",
        "io.javalin:javalin:jar:4.6.0",
        "org.mindrot:jbcrypt:0.4",
        "org.slf4j:slf4j-simple:1.8.0-beta4",
        "com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.9",

        # For testing
        "com.google.truth:truth:1.1.3",
        "junit:junit:4.13.2",

        # For KDash API
        "net.java.dev.jna:jna:5.10.0",
        "net.java.dev.jna:jna-platform:5.10.0",

        "com.google.api.grpc:grpc-google-cloud-pubsub-v1:0.1.24",
        "com.google.api.grpc:proto-google-cloud-pubsub-v1:0.1.24",

        # Required by something
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "com.squareup:kotlinpoet:2.2.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    generate_compat_repositories = True,
    # Explicitly name the repository where these artifacts will live
    name = "maven",
)

# Make the repository generated by maven.install visible
use_repo(maven, "maven")
