# -- bazel_dep definitions -- #
bazel_dep(name = "grpc-java", version = "1.71.0")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "grpc-kotlin", version = "1.7.1")

# Temporary local override for grpc_kotlin
local_path_override(
    module_name = "grpc-kotlin",
    path = "/Users/williamhester/Programming/grpc-kotlin",
)

# -- Configure Kotlin --
KOTLIN_VERSION = "1.9.23"
kotlin = use_extension("@rules_kotlin//kotlin:extensions.bzl", "kotlin")
kotlin.toolchain(version = KOTLIN_VERSION)

# The extension often defines the repository for the compiler itself.
# You might need to make it visible using use_repo.
# Check the rules_kotlin docs for the exact repository name needed (often 'kotlin_compiler').
use_repo(kotlin, "kotlin_compiler")

bazel_dep(name = "kdash")
local_path_override(
    module_name = "kdash",
    path = "/Users/williamhester/IdeaProjects/iRacingOverlay/src",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "launch4j",
    urls = ["https://phoenixnap.dl.sourceforge.net/project/launch4j/launch4j-3/3.50/launch4j-3.50-macosx-x86.tgz?viasf=1"],
    sha256 = "683dfd53ac892ce11497336a25f3bc51d57398ae1621b78aa9ca6b73fbd7fe69",
    build_file_content = """
load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "launch4j_lib",
    jars = glob(["launch4j/launch4j.jar", "launch4j/lib/*.jar"]),
    visibility = ["//visibility:public"],
)

genrule(
  name = "files",
  outs = ["files.txt"],
  srcs = [":bin"],
  cmd = "find . > \\"$@\\"",
  visibility = ["//visibility:public"],
)

filegroup(
  name = "bin",
  srcs = glob(["launch4j/bin/*"]),
  visibility = ["//visibility:public"],
)

filegroup(
  name = "w32api",
  srcs = glob(["launch4j/w32api/*"]),
  visibility = ["//visibility:public"],
)

filegroup(
  name = "head",
  srcs = glob(["launch4j/head/*"]),
  visibility = ["//visibility:public"],
)

java_binary(
    name = "launch4j",
    runtime_deps = [":launch4j_lib"],
    main_class = "net.sf.launch4j.Main",
    data = [
        ":bin",
        ":w32api",
        ":head",
    ],
    visibility = ["//visibility:public"],
)
""",
)

# -- Configure Maven --
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.google.guava:guava:31.1-jre",
        "com.google.flogger:flogger:0.7.4",
        "com.google.flogger:flogger-system-backend:0.7.4",
        "com.google.protobuf:protobuf-kotlin:3.17.0",
        "com.google.protobuf:protobuf-java-util:4.31.1",
        "com.squareup.okhttp3:okhttp:4.10.0",
        "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10",
        "io.grpc:grpc-api:1.57.0",
        "io.grpc:grpc-all:1.57.0",
        "io.grpc:grpc-netty-shaded:1.57.0",
        "io.grpc:grpc-protobuf:1.57.0",
        "io.grpc:grpc-stub:1.57.0",
        "io.javalin:javalin:jar:4.6.0",
        "org.mindrot:jbcrypt:0.4",
        "org.slf4j:slf4j-simple:1.8.0-beta4",
        "com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.9",

        # For testing
        "com.google.truth:truth:1.1.3",
        "junit:junit:4.13.2",

        # For KDash API
        "net.java.dev.jna:jna:5.10.0",
        "net.java.dev.jna:jna-platform:5.10.0",

        "com.google.api.grpc:grpc-google-cloud-pubsub-v1:0.1.24",
        "com.google.api.grpc:proto-google-cloud-pubsub-v1:0.1.24",

        # Required by something
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "com.squareup:kotlinpoet:2.2.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    generate_compat_repositories = True,
    # Explicitly name the repository where these artifacts will live
    name = "maven",
)

# Make the repository generated by maven.install visible
use_repo(maven, "maven")
